# turtlex

./: LICENSE.md  README.md
results/: CMakeLists.txt  package.xml
results/gym/office_nav_sac/: openaigym.episode_batch.0.142788.stats.json  openaigym.episode_batch.0.61519.stats.json  openaigym.manifest.0.142788.manifest.json  openaigym.manifest.0.61519.manifest.json
results/nets_train/office_nav_sac/: thesis_2_value_net.pth  thesis_main_policy_net.pth
results/nets_ver/office_nav_sac/: prev_2120_policy_net_compactor.pth  prev_2120_policy_net_pnv.pth
results/ver_logs/office_nav_sac/: nav_sac_ver_log.txt
rosnode/: package.xml
task_behavior_engine/: CMakeLists.txt
task_behavior_engine/src/task_behavior_engine/: branch.py  decorator.py  node.py
task_behavior_ros/: package.xml
task_behavior_ros/src/task_behavior_ros/: batterystate.py  introspection.py  service.py  tf.py
turtlex/turtlex_bt/: package.xml
turtlex/turtlex_bt/launch/: bt.launch
turtlex/turtlex_bt/scripts/: ApproachToy.py  DropboxNavigation.py  NoToyDetected.py  WaypointNavigation.py
turtlex/turtlex_description/: CMakeLists.txt  package.xml
turtlex/turtlex_description/config/: widowx_con_ns.yaml
turtlex/turtlex_description/config/old/: turtlex.yaml
turtlex/turtlex_description/launch/: xtion_pro_sensor.launch
turtlex/turtlex_description/meshes/: main_body.dae  wheel.dae
turtlex/turtlex_description/meshes/sensors/: hokuyo.dae  xtion_pro_camera.dae  xtion_pro_stack.dae
turtlex/turtlex_description/meshes/stacks/: plate_bottom.dae  plate_bottom_reexport.dae  plate_middle_reexport.dae  plate_top_reexport.dae  pole_bottom.dae  pole_kinect_reexport.dae  pole_middle.dae  pole_middle_reexport.dae  pole_top.dae  pole_top_reexportdae.dae
turtlex/turtlex_description/robots/: rgbd.urdf.xacro  turtlex_main.urdf.xacro  widowx_arm.urdf.xacro
turtlex/turtlex_description/urdf/: asus_xtion_pro.urdf.xacro  asus_xtion_pro_gazebo.urdf.xacro  common_properties.urdf.xacro  hexagons.urdf.xacro  kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  widowx.urdf.xacro  widowx_gazebo.urdf.xacro
turtlex/turtlex_description/urdf/old (with comments)/: hexagons.urdf.xacro  widowx_gazebo.urdf.xacro
turtlex/turtlex_gym/: CMakeLists.txt  package.xml
turtlex/turtlex_gym/config/: turtlex_office_arm_ddpg.yaml  turtlex_office_nav_sac.yaml  turtlex_openai_qlearn_params.yaml  turtlex_openai_qlearn_params_wall.yaml  turtlex_openai_sac_params_office.yaml
turtlex/turtlex_gym/launch/: arm.launch  nav.launch  prova_mondo.launch  testdrive.launch  world_test.launch
turtlex/turtlex_gym/launch/old/: nav (copia).launch
turtlex/turtlex_gym/results/office_arm_ddpg/: 1_actor.h5  openaigym.episode_batch.0.120584.stats.json  openaigym.episode_batch.0.132092.stats.json  openaigym.episode_batch.0.5018.stats.json  openaigym.episode_batch.0.95747.stats.json  openaigym.manifest.0.120584.manifest.json  openaigym.manifest.0.132092.manifest.json  openaigym.manifest.0.5018.manifest.json  openaigym.manifest.0.95747.manifest.json
turtlex/turtlex_gym/results/office_nav_sac/: openaigym.episode_batch.0.107502.stats.json  openaigym.episode_batch.0.11783.stats.json  openaigym.episode_batch.0.70849.stats.json  openaigym.episode_batch.0.95055.stats.json  openaigym.manifest.0.107502.manifest.json  openaigym.manifest.0.11783.manifest.json  openaigym.manifest.0.70849.manifest.json  openaigym.manifest.0.95055.manifest.json
turtlex/turtlex_gym/scripts/: alg_arm_ddpg_office.py  alg_nav_sac_office.py  arm_moveit_test.py  ddpg.py  ddpg_utils.py  guida files.txt  my_sac_office.py  my_start_qlearning_maze.py  my_start_qlearning_wall.py  my_turtlex_maze.py  my_turtlex_wall.py  plot_gym_results.py  plot_results.py  start_qlearning.py  start_sac_office.py  task_arm_office.py  task_nav_office.py  turtlex_env.py  turtlex_env_copia.py  turtlex_fsm.py  turtlex_maze.py  turtlex_office.py  utils.py
turtlex/turtlex_gym/scripts/SAC_yt/: main_sac.py  networks.py  sac_torch.py
turtlex/turtlex_gym/scripts/copie di sicurezza/: my_sac_officeCOPIA.py  turtlex_office_COPIA.py  turtlex_office_vecchio_state_vector.py
turtlex/turtlex_gym/scripts/nav_sac/office/sac_training_results/: openaigym.episode_batch.0.6956.stats.json  openaigym.episode_batch.0.79500.stats.json  openaigym.manifest.0.6956.manifest.json  openaigym.manifest.0.79500.manifest.json
turtlex/turtlex_gym/scripts/old/: turtlex_env (copia).py
turtlex/turtlex_gym/scripts/sac_nav_brasile/: respawnGoal.py  sac.py
turtlex/turtlex_gym/scripts/sac_nav_brasile/launch/: sac_TCC_world_.launch  sac_TCC_world_U.launch  sac_TCC_world_obst.launch  sac_stage_1.launch  sac_stage_2.launch  sac_stage_4.launch
turtlex/turtlex_gym/templates/: template_my_training_env.py
turtlex/turtlex_gym/training_results/: openaigym.episode_batch.0.53064.stats.json  openaigym.manifest.0.53064.manifest.json
turtlex/turtlex_gym/training_results/office_arm_ddpg/: openaigym.episode_batch.0.57429.stats.json  openaigym.episode_batch.0.72707.stats.json  openaigym.manifest.0.57429.manifest.json  openaigym.manifest.0.72707.manifest.json
turtlex/turtlex_gym/training_results/office_nav_sac/: openaigym.episode_batch.0.59747.stats.json  openaigym.manifest.0.59747.manifest.json
turtlex/turtlex_gym/utils/: plot_results.py
turtlex_arm/: CMakeLists.txt  package.xml
turtlex_bt/: CMakeLists.txt
turtlex_bt/launch/: bt.launch
turtlex_bt/scripts/: DropToy.py  GrabToy.py  PushCurrentLocation.py  SetWaypoint.py  turtlex_bt.py
turtlex_ikfast_plugin/: CMakeLists.txt
turtlex_moveit_config/: CMakeLists.txt  file_urdf_generato.xml
utils/: turtlex_vision_template.py
utils/task_behavior_engine/: package.xml  setup.py
utils/task_behavior_engine/src/task_behavior_engine/: example.py  tree.py
utils/task_behavior_msgs/: CMakeLists.txt  package.xml
utils/task_behavior_msgs/msg/: TreeStatus.msg
utils/task_behavior_ros/: CMakeLists.txt
utils/task_behavior_ros/src/task_behavior_ros/: action.py  talker.py  time.py  topic.py
ver_test/: load_edit_net.py  nav_query.py  nav_sac_conv.py  nav_sac_converter.py  nav_sac_tests.py  nav_sac_ver.py  (+3 more)
(+127 files in other folders)
