<?xml version="1.0"?>
<package format="2">
  <name>results</name>
  <version>0.0.0</version>
  <description>The results package. This is a fake package created to let turtlex_gym scrips easily read/write inside this folder</description>

  <maintainer email="s3942710@studenti.unige.it">Andrea Pitto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
