<?xml version="1.0"?>
<package format="2">
  <name>task_behavior_ros</name>
  <version>0.0.0</version>
  <description>The task_behavior_ros package</description>
  <maintainer email="s3942710@studenti.unige.it">Andrea Pitto</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>task_behavior_engine</exec_depend>
  <exec_depend>task_behavior_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
