<package>
  <name>turtlex_description</name>
  <version>2.3.11</version>
  <description>
     turtlex_description provides a complete 3D model of the TurtleBot for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author email="s3942710@studenti.unige.it">Andrea Pitto</author>
  <maintainer email="s3942710@studenti.unige.it">Andrea Pitto</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
</package>
