<?xml version="1.0"?>
<package format="2">
  <name>turtlex_gym</name>
  <version>0.0.0</version>
  <description>The turtlex_gym package</description>

  <maintainer email="s3942710@studenti.unige.it">Andrea Pitto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openai_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  <build_export_depend>openai_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>openai_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
</package>
