<?xml version="1.0"?>
<package format="2">
  <name>task_behavior_msgs</name>
  <version>0.0.0</version>
  <description>The task_behavior_msgs package</description>

  <maintainer email="s3942710@studenti.unige.it">Andrea Pitto</maintainer>
  <license>Apache 2.0</license>

  <author email="allison.thackston@tri.global">Allison Thackston</author>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
